k8s/nginx/cert-manager.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager-test
