k8s/nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rails-ing
spec:
  rules:
  - host: development.barth.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: webserver-service
          servicePort: 3000
